# airflow-pipeline-health-monitor

./: .gitignore  README.md  docker-compose.yml  note  pyproject.toml
docs/: decision_log.md
scripts/: print_project_tree.ps1
