[tool.poetry]
name = "airflow-pipeline-health-monitor"
version = "0.1.0"
description = ""
authors = ["kaganmart9 <alikmart99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = ">=2.2.0,<2.3.0"
pyarrow = ">=16.0.0,<17.0.0"
sqlalchemy = ">=2.0.0,<2.1.0"
psycopg2-binary = ">=2.9.0,<3.0.0"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.2.0"
fastapi = ">=0.115.0"
uvicorn = {version = ">=0.30.0", extras = ["standard"]}
scikit-learn = ">=1.5.0,<1.6.0"
scipy = ">=1.13.0,<1.14.0"
requests = ">=2.32.0,<2.33.0"
streamlit = "^1.52.2"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.6.0"
black = ">=24.0.0"
mypy = ">=1.10.0"
pre-commit = ">=3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "PL"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"